--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -182,17 +182,17 @@ extra_javascript:
 
 extra:
   social:
-    - type: 'github'
+    - icon: 'fontawesome/brands/github-alt'
       link: 'https://github.com/sispop-dev'
-    - type: 'twitter'
+    - icon: 'fontawesome/brands/twitter'
       link: 'https://twitter.com/sispop_'
-    - type: 'telegram'
+    - icon: 'fontawesome/brands/telegram'
       link: 'https://t.me/Sispop'
-    - type: 'reddit'
+    - icon: 'fontawesome/brands/reddit'
       link: 'https://www.reddit.com/r/SispopProject'
-    - type: 'youtube'
+    - icon: 'fontawesome/brands/youtube'
       link: 'https://www.youtube.com/sispopnetwork'
-    - type: 'facebook'
+    - icon: 'fontawesome/brands/facebook'
       link: 'https://www.facebook.com/SispopNetwork/'
 
 # Google Analytics
